--- a/src/components/DafaulrInput/styles.module.css
+++ b/src/components/DafaulrInput/styles.module.css
@@ -10,4 +10,34 @@
 }
 
 .de_input {
+  all: unset;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+
+  color: var(--text-default);
+  font-size: 1.8rem;
+  text-align: center;
+  border: 0.2rem solid transparent;
+  border-bottom: 0.2rem solid var(--primary);
+
+  padding: 0.8rem;
+
+  transition: all 0.1s ease-in-out;
+}
+
+.de_input:focus {
+  border: 0.2rem solid var(--primary);
+  border-radius: 0.8rem;
+}
+.de_input:disabled {
+  border-bottom: 0.2rem solid var(--disabled);
+  color: var(--text-muted);
+}
+
+.de_input[type="number"]::-webkit-inner-spin-button,
+.de_input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
